kubernetes/deployments/cerebro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cerebro-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      run: devx-cerebro
  template:
    metadata:
      labels:
        run: devx-cerebro
    spec:
      containers:
      - image: ashoka007/random-bg-color
        name: cerebro-pod
        ports:
        - containerPort: 5000
