kubernetes/deployments/qualex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qualex-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      run: devx-qualex
  template:
    metadata:
      labels:
        run: devx-qualex
    spec:
      containers:
      - image: ashoka007/random-bg-color
        name: qualex-pod
        ports:
        - containerPort: 5000
